--- a/po/zh-cn/ssr-plus.po
+++ b/po/zh-cn/ssr-plus.po
@@ -603,3 +603,56 @@ msgstr "订阅新节点自动切换设置"
 
 msgid "Subscribe new add server default Auto-Switch on"
 msgstr "订阅加入的新节点默认开启自动切换"
+
+msgid "Open v2ray split-flow"
+msgstr "开启V2ray分流"
+
+msgid "When open v2ray split-flow,your main server must be a v2ray server"
+msgstr "当使用v2ray分流功能时 主服务器必须为V2ray"
+
+msgid "Youtube Proxy"
+msgstr "Youtube 代理"
+
+msgid "TaiWan Video Proxy"
+msgstr "台湾视频服务代理"
+
+msgid "Netflix Proxy"
+msgstr "Netflix 代理"
+
+msgid "Diseny+ Proxy"
+msgstr "Diseny+ 代理"
+
+msgid "Prime Video Proxy"
+msgstr "Prime Video 代理"
+
+msgid "Subscription"
+msgstr "订阅管理"
+
+msgid "Node List"
+msgstr "节点列表"
+
+msgid "Apply"
+msgstr "应用"
+
+msgid "total"
+msgstr "总计"
+
+msgid "Nodes"
+msgstr "个节点"
+
+msgid "foreign websites"
+msgstr "国外网站"
+
+msgid "domestic website"
+msgstr "国内网站"
+
+msgid "Problem detected"
+msgstr "无法访问"
+
+msgid "Connection Timeout"
+msgstr "连接超时"
+
+
+msgid "Game Mode"
+msgstr "游戏模式"
+
